gitops/business-apps/catalog/catalog-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moto-catalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  namespace: moto-catalog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog-app
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: moto-catalog
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: catalog
